# Chess-Game

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Pezzi.h  RepGame.h  Scacchiera.h
src/: Game.cpp  Gioco.cpp  MosseSpeciali1.cpp  MosseSpeciali2.cpp  Pedina.cpp  Pezzi.cpp  RepGame.cpp  Replay.cpp  Scacchiera.cpp
